Fixed up ripples scroll on mobile. Changed up the moon icon. Tweaked some styles.

--- a/server/src/client/_variables.scss
+++ b/server/src/client/_variables.scss
@@ -3,10 +3,10 @@ $bg-light-card-colour: #e8e9ea;
 $bg-dark-colour: #050403;
 $bg-dark-card-colour: #222425;
 $bg-secondary-color: #f3f3f6;
-$colour-light-link: #3e325f;
-$colour-light-visited: #4e3a58;
-$colour-dark-link: #e2bbf9;
-$colour-dark-visited: #ad41a8;
+$colour-light-link: #b36ab3;
+$colour-light-visited: #a556a5;
+$colour-dark-link: #f9bbf6;
+$colour-dark-visited: #e838a9;
 $colour-primary: #e2bbf9;
 $colour-lightGrey: #d2d6dd;
 $colour-grey: #747681;
